--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -68,12 +68,13 @@ section {
     padding-left: 0;
     margin: 0;
     text-align: right;
+position:fixed;top:0;width:100%;/*make the navigation bar fixed*/
 }
 
 .navbar__menu li {
     display: inline-block;
 }
-
+.navbar__menu li:active{background-color:yellow;}
 .navbar__menu .menu__link {
     display: block;
     padding: 1em;
@@ -221,3 +222,11 @@ section.your-active-class .landing__container::after {
 		           rotate(-360deg);
 	}
 }
+/*styles to top button*/
+#topBtn{
+display:none;
+cursor:pointer;font-size:14pt;
+position:fixed;bottom:20px;right:30px;z-index:99;
+background-color:green;color:black;padding:20px;	
+}
+#topBtn:hover{background-color:red;}
