--- a/projects/landing-page/css/styles.css
+++ b/projects/landing-page/css/styles.css
@@ -82,6 +82,7 @@ position:fixed;top:0;width:100%;/*make the navigation bar fixed*/
     text-decoration: none;
     color: #000;
 }
+.active {background-color:#ff0000;}
 
 .navbar__menu .menu__link:hover {
     background: #333;
